td element ignores zero width/height input element https://bugs.webkit.org/show_bug.cgi?id=74636

Patch by Florin Malita <fmalita@google.com> on 2011-12-20
Reviewed by Kent Tamura.

Source/WebCore:

Test: fast/forms/input-zero-width.html

* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::computePreferredLogicalWidths):
Relax the attribute test to allow setting widths == 0.

LayoutTests:

* fast/forms/input-zero-width-expected.html: Added.
* fast/forms/input-zero-width.html: Added.

Canonical link: https://commits.webkit.org/91727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103377 268f45cc-cd09-0410-ab3c-d52691b4dbfc